--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
-/*  your css code here. If applicable */
+ table.middle {
+      border: 1px solid black;
+      border-spacing: 1px;
+      padding: 1px;
+    }
+    td, th {
+      border: 1px solid black;
+      padding: 10px;
+    }
+    .center {
+      text-align: center;
+    }
+    .right {
+      text-align: right;
+    }
+    .green {
+      background-color: green;
+    }
+    .blue {
+      background-color: blue;
+    }
+    #t-image img {
+      width: 50px;
+      height: 50px;
+    }
