--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
  table.middle {
-      border: 1px solid black;
+      border:1px solid rgb(0, 0, 0);
       border-spacing: 1px;
       padding: 1px;
     }
     td, th {
-      border: 1px solid black;
+      border:1px solid rgb(0, 0, 0);
       padding: 10px;
     }
     .center {
